[gd_scene load_steps=2 format=3 uid="uid://b8n7q3xar5k1d"]

[ext_resource type="Script" uid="uid://dsklnfrhbvfmd" path="res://scripts/ProductionPanel.gd" id="1_prod_panel"]

[node name="ProductionPanel" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prod_panel")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProductsSection" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="ProductContainer" type="VBoxContainer" parent="MainContainer/ProductsSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator1" type="VSeparator" parent="MainContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="ProductionSection" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="ProductionContainer" type="VBoxContainer" parent="MainContainer/ProductionSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator2" type="VSeparator" parent="MainContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="StationsSection" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="StationContainer" type="VBoxContainer" parent="MainContainer/StationsSection"]
layout_mode = 2
size_flags_horizontal = 3
